change db user name

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -48,9 +48,9 @@ spring:
       # it can be set to any label, branch or commit of the configuration source Git repository
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/Busifrog
-    username: Busifrog
-    password:
+    url: jdbc:postgresql://localhost:5432/busifrog
+    username: busifrog
+    password: root
     hikari:
       poolName: Hikari
       auto-commit: false
