Deployment fix Run these two commands to deploy ./gradlew -Pprod bootJar -x test heroku deploy:jar build/libs/*jar

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -44,6 +44,9 @@
     "clientPackageManager": "npm",
     "languages": ["en", "hi"],
     "entities": ["SellerPlan", "Room", "Contact", "Category", "Product", "Service", "UserVisit"],
-    "lastLiquibaseTimestamp": 1629790601000
+    "lastLiquibaseTimestamp": 1629790601000,
+    "herokuAppName": "busifrog",
+    "herokuDeployType": "jar",
+    "herokuJavaVersion": "11"
   }
 }
