--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "redux": "4.1.0",
     "redux-thunk": "2.3.0",
     "tslib": "2.3.0",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "workbox-build": "^6.2.4"
   },
   "devDependencies": {
     "@testing-library/react": "11.2.7",
@@ -159,12 +160,12 @@
     "ts-loader": "9.2.3",
     "typescript": "4.3.3",
     "wait-on": "5.3.0",
-    "webpack": "5.39.0",
-    "webpack-cli": "4.7.2",
+    "webpack": "^5.39.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.8.0",
     "webpack-notifier": "1.13.0",
-    "workbox-webpack-plugin": "6.1.5"
+    "workbox-webpack-plugin": "^6.1.5"
   },
   "engines": {
     "node": ">=14.17.1"
