--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -23,6 +23,7 @@ eureka:
   instance:
     prefer-ip-address: true
   client:
+    enabled: false
     service-url:
       defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
 
