--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
     "@reduxjs/toolkit": "1.6.0",
-    "axios": "0.21.1",
+    "axios": "^0.22.0",
     "bootstrap": "4.6.0",
     "bootswatch": "5.0.1",
     "dayjs": "1.10.5",
@@ -86,6 +86,7 @@
     "react-hot-loader": "4.13.0",
     "react-jhipster": "0.16.2",
     "react-loadable": "5.5.0",
+    "react-recaptcha": "^2.3.10",
     "react-redux": "7.2.4",
     "react-redux-loading-bar": "5.0.0",
     "react-router-dom": "5.2.0",
@@ -126,7 +127,7 @@
     "eslint-webpack-plugin": "2.5.4",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.2.10",
-    "generator-jhipster": "7.1.0",
+    "generator-jhipster": "^7.3.0",
     "html-webpack-plugin": "5.3.1",
     "husky": "4.3.8",
     "identity-obj-proxy": "3.0.0",
